# CustomHoudiniPlugin

./: .gitignore  CMakeLists.txt  build.bat
HelloHDK/: CMakeLists.txt  SOP_HelloHDK.C
SOP_Normal/: CMakeLists.txt  SOP_Normal.cpp
SOP_OcclusionRemover/: CMakeLists.txt  SOP_OcclusionRemover.cpp
SOP_VolumeProject/: CMakeLists.txt  SOP_VolumeProject.C  SOP_VolumeProject.h
SOP_WindingIsosurface/: CMakeLists.txt  MarchingCube.cpp  MarchingCube.h  SOP_WindingIsosurface.cpp  SOP_WindingIsosurface.proto.h  UT_BVH.h  UT_BVHImpl.h  UT_SolidAngle.C  UT_SolidAngle.h
